tests/ui/fn/issue-1900.rs
fn main<T>() { }
//~^ ERROR `main` function is not allowed to have generic parameters

// ferrocene-annotations: fls_8jb3sjqamdpu
// Program Entry Point
